fixed index page stretching

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -6,7 +6,6 @@ background-repeat: repeat;
 
 .catdog {
   width: 100%;
-  max-height: 551px;
   position: absolute;
 }
 
